@@ -45,6 +45,7 @@ NEWS
   * [core] add generic vector implementation
   * [core] replace array weakref with vector
   * [base64] fix crash due to broken force_assert
+  * [unittests] add test_buffer and test_base64 unit tests
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
